manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cit270
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: cit270
  template: 
    metadata: 
        labels: 
          app: cit270
    spec:
      containers:
        - name: cit270
          image: nsimbi/cit270
          command: ["npm"]
          args: ["run", "start"]
          ports:
            - containerPort: 443
          resources:
            limits:
              cpu: "0.125"
              memory: "500Mi"
            requests:
              cpu: "0.1"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3


---
apiVersion: v1
kind: Service
metadata: 
  name: cit270-loadbalancer
spec:
  selector:
    app: cit270
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: parker-ingress
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
specs: 
  tls: 
  - hosts:
    - parker-loadbalancer.cit270.com
    secretName: parker-tls
  rules: 
  - host: parker-loadbalancer.cit270.com
    http: 
      paths: 
      - backend: 
        serviceName: cit270-loadbalancer
        servicePort: 80


# ---
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: cit270-ManagedCertificate
# spec: 
#   domains:
#     - parker-loadbalancer.cit270.com
